# br41ndmg

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benches/: resampler_bench.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs  resample_job.rs  tui.rs
docs/: ARCHITECTURE.md  BENCHMARK_PLAN.md  DSP_NOTES.md  PERFORMANCE.md  PROJECT_GOAL.md  REALTIME.md  REQUIREMENTS.md  STRUCTURE.md  TEST_PLAN.md  USAGE.md
examples/: resample_file.rs  tone_resample.rs
src/: error.rs  filter.rs  io.rs  lib.rs  polyphase.rs  resampler.rs  sinc.rs  utils.rs  window.rs
tests/: file_io.rs  filter.rs  impulse.rs  quality_tests.rs  real_audio.rs  resampler.rs  sine.rs  streaming.rs  sweep.rs
