[package]
name = "br41ndmg-cli"
version = "0.2.1"
edition = "2024"
description = "Interactive terminal UI for the br41ndmg audio resampler."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ultraelectronica/br41ndmg"
publish = true

[[bin]]
name = "br41ndmg"
path = "src/main.rs"

[dependencies]
br41ndmg = { path = "..", version = "0.2", default-features = false }
ratatui = "0.29"
crossterm = "0.28"

[features]
default = ["flac"]
flac = ["br41ndmg/flac"]
